--- a/styles/styles.css
+++ b/styles/styles.css
@@ -203,6 +203,7 @@ h6 {
   line-height: 1.25;
   scroll-margin: 40px;
   color: #fff;
+  word-break: break-word;
 }
 
 h1 {
